--- a/app/views/layout/_navbar_view.html
+++ b/app/views/layout/_navbar_view.html
@@ -76,7 +76,7 @@
 <!-- end sub-toolbar -->
 
 <!-- start sidenav-left -->
-<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
+<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left">
   <md-toolbar class="md-theme-indigo">
     <h1 class="md-toolbar-tools">Sidenav Left</h1>
   </md-toolbar>
