--- a/app/views/secured/account_view.html
+++ b/app/views/secured/account_view.html
@@ -1,1 +1,38 @@
+<md-content layout="row" layout-align="center center">
 
+    <md-card flex="100">
+
+     
+      <md-card-content>
+        <form>
+          	<div layout-gt-sm="row">
+	            <md-input-container class="md-icon-float md-block" flex>
+	              	<label>Username</label>
+	              	<md-icon class="material-icons md-light md-48"> person </md-icon>
+	              	<input ng-model="account.user.name" type="text">
+	            </md-input-container>
+          	</div>
+          	<div layout-gt-sm="row">
+	            <md-input-container class="md-icon-float md-block" flex>
+	              	<label>Email</label>
+	              	<md-icon class="material-icons md-light md-48"> email </md-icon>
+	              	<input ng-model="account.user.email" type="email">
+	            </md-input-container>
+          	</div>
+          	<div layout-gt-sm="row">
+	            <md-input-container class="md-icon-float md-block" flex>
+	              	<label>Date</label>
+	              	<md-icon class="material-icons md-light md-48"> date_range </md-icon>
+	              	<input ng-model="account.user.created_at" readonly>
+	            </md-input-container>
+          	</div>
+          
+          	<md-button type="button" class="md-raised md-primary" ng-click="account.login()" style="float:right">Guardar</md-button>
+          
+        </form>
+      </md-card-content>
+
+      
+    </md-card>
+
+</md-content>
