--- a/app/views/user/show_view.html
+++ b/app/views/user/show_view.html
@@ -2,35 +2,34 @@
     <md-card flex="100">
      
       <md-card-content>
-        <form name="accountForm">
+        <form name="userForm">
           	<div layout-gt-sm="row">
 	            <md-input-container class="md-icon-float md-block" flex>
 	              	<label>Username</label>
 	              	<md-icon class="material-icons md-light md-48"> person </md-icon>
-	              	<input ng-model="account.user.name" type="text" required>
+	              	<input ng-model="vm.user.name" type="text" required>
 	            </md-input-container>
           	</div>
           	<div layout-gt-sm="row">
 	            <md-input-container class="md-icon-float md-block" flex>
 	              	<label>Email</label>
 	              	<md-icon class="material-icons md-light md-48"> email </md-icon>
-	              	<input ng-model="account.user.email" type="email" required>
+	              	<input ng-model="vm.user.email" type="email" required>
 	            </md-input-container>
           	</div>
           	<div layout-gt-sm="row">
 	            <md-input-container class="md-icon-float md-block" flex>
 	              	<label>Date</label>
 	              	<md-icon class="material-icons md-light md-48"> date_range </md-icon>
-	              	<input ng-model="account.user.created_at" readonly>
+	              	<input ng-model="vm.user.created_at" readonly>
 	            </md-input-container>
           	</div>
 
-          	<md-button type="button" class="md-raised md-primary" ng-click="account.save()" ng-disabled="accountForm.$invalid" style="float:right">Guardar</md-button>
+          	<md-button type="button" class="md-raised md-primary" ng-click="vm.save()" ng-disabled="userForm.$invalid" style="float:right">Guardar</md-button>
           
         </form>
       </md-card-content>
 
       
     </md-card>
-
 </md-content>
