gulp notify, userservice

--- a/app/views/auth/login_view.html
+++ b/app/views/auth/login_view.html
@@ -30,5 +30,7 @@
       <md-progress-linear md-mode="indeterminate" ng-if="auth.authLoad == true"></md-progress-linear>
       <p style="text-align: center" ng-if="auth.authError">{{ auth.authErrorText }}</p>
     </md-card>
+
+    <p layout="row" flex layout-align="center center">Desarrollado por:<a href="">BluLab</a></p>
   </div>
 </md-content>
