--- a/app/views/auth/signup_view.html
+++ b/app/views/auth/signup_view.html
@@ -35,5 +35,7 @@
       <md-progress-linear md-mode="indeterminate" ng-if="signup.authLoad == true"></md-progress-linear>
       <p style="text-align: center" ng-if="signup.authError">Error!</p>
     </md-card>
+    <p layout="row" flex layout-align="center center">Desarrollado por:<a href="">BluLab</a></p>
+
   </div>
 </md-content>
