--- a/app/views/user/index_view.html
+++ b/app/views/user/index_view.html
@@ -1,29 +1,28 @@
 <md-table-container>
-  <table md-table  md-progress="promise">
-    <thead md-head md-order="query.order" md-on-reorder="onReorder">
-      <tr md-row>
-        <th md-column>Nombre</th>
-        <th md-column>Email</th>
-        <th md-column>Fecha</th>
-        <th md-column></th>
-      </tr>
-    </thead>
-    <tbody md-body>
-      <tr md-row ng-repeat="user in vm.users">
-        <td md-cell>{{user.name}}</td>
-        <td md-cell>{{user.email}}</td>
-        <td md-cell>{{user.created_at | date: 'dd-MM-YYYY' }}</td>
-        <td md-cell class="center">
-          <md-button class="md-icon-button" ng-click="vm.show(user)" aria-label="More">
-            <md-icon class="material-icons md-light md-48"> edit </md-icon>
-          </md-button>
-          <md-button class="md-icon-button" ng-click="vm.delete()" aria-label="More">
-            <md-icon class="material-icons md-light md-48"> delete </md-icon>
-          </md-button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+    <table md-table md-progress="promise">
+        <thead md-head md-order="vm.query.order" md-on-reorder="vm.onReorder">
+            <tr md-row>
+                <th md-column md-order-by="name">Nombre</th>
+                <th md-column>Email</th>
+                <th md-column>Fecha</th>
+                <th md-column></th>
+            </tr>
+        </thead>
+        <tbody md-body>
+            <tr md-row ng-repeat="user in vm.users">
+                <td md-cell>{{user.name}}</td>
+                <td md-cell>{{user.email}}</td>
+                <td md-cell>{{user.created_at | date: 'dd-MM-YYYY' }}</td>
+                <td md-cell class="center">
+                    <md-button class="md-icon-button" ng-click="vm.show(user)" aria-label="More">
+                        <md-icon class="material-icons md-light md-48"> edit </md-icon>
+                    </md-button>
+                    <md-button class="md-icon-button" ng-click="vm.delete()" aria-label="More">
+                        <md-icon class="material-icons md-light md-48"> delete </md-icon>
+                    </md-button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </md-table-container>
-
-<md-table-pagination md-limit="query.limit" md-page="query.page" md-total="{{desserts.count}}" md-on-paginate="onPaginate" md-page-select></md-table-pagination>
+<md-table-pagination md-limit="vm.query.limit" md-page="vm.query.page" md-total="{{ vm.users.length }}" md-on-paginate="vm.onPaginate" md-page-select></md-table-pagination>
